// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildWeeklySummary：F1 週會摘要（PRD §10.2） > Markdown 版：快照比對；用 ## 與 -，負號 U+2212 1`] = `
"## 週會摘要

golden 驗證資料

本期 8/2–8/2（1 天）對比 上期 8/1–8/1（1 天）· DTC、MARKETPLACE · 金額未稅

- 淨營收 2,470 元，比上期多 220 元（+9.8%）
- 扣廣告後貢獻 255 元，比上期少賺 315 元（−55.3%）
- 扣廣告後貢獻率 10.3%，降 15.0 個百分點

## 本期三件事

1. 淨營收多 220 元，卻少賺 315 元：先看貢獻變化拆解中扣最多的兩項，再到通路健檢確認是哪個通路。
2. 折扣多花 250 元：先列出本期的促銷檔期，核對折扣有沒有換到足夠的銷量。
3. 廣告多花 150 元：比對各媒體的 ROAS，先縮減表現最差的活動，再設定每週檢查點。

待辦：未完成 5 項；置頂 檢討折扣檔期（王小明，9/30）、核對廣告預算（未指定負責人，未定期限）

資料到 8/3。數字由 EC ProfitLens 在這台電腦計算，可在「計算與來源」查到原始檔名與行號。"
`;

exports[`buildWeeklySummary：F1 週會摘要（PRD §10.2） > 純文字版：快照比對，並逐行以 labels 與格式化函式核對 1`] = `
"週會摘要
golden 驗證資料
本期 8/2–8/2（1 天）對比 上期 8/1–8/1（1 天）· DTC、MARKETPLACE · 金額未稅

淨營收 2,470 元，比上期多 220 元（+9.8%）
扣廣告後貢獻 255 元，比上期少賺 315 元（−55.3%）
扣廣告後貢獻率 10.3%，降 15.0 個百分點

本期三件事
1. 淨營收多 220 元，卻少賺 315 元：先看貢獻變化拆解中扣最多的兩項，再到通路健檢確認是哪個通路。
2. 折扣多花 250 元：先列出本期的促銷檔期，核對折扣有沒有換到足夠的銷量。
3. 廣告多花 150 元：比對各媒體的 ROAS，先縮減表現最差的活動，再設定每週檢查點。

待辦：未完成 5 項；置頂 檢討折扣檔期（王小明，9/30）、核對廣告預算（未指定負責人，未定期限）
資料到 8/3。數字由 EC ProfitLens 在這台電腦計算，可在「計算與來源」查到原始檔名與行號。"
`;
